--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   json_annotation: ^4.9.0
   get_it: ^7.7.0
   injectable: ^2.4.4
+  url_launcher: ^6.3.0
   #flutter_native_splash: ^2.3.8
 
 dev_dependencies:
