--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   get_it: ^7.7.0
   injectable: ^2.4.4
   url_launcher: ^6.3.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  flutter_map_cancellable_tile_provider: ^3.0.0
+  geolocator: ^13.0.1
   #flutter_native_splash: ^2.3.8
 
 dev_dependencies:
