--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   latlong2: ^0.9.1
   flutter_map_cancellable_tile_provider: ^3.0.0
   geolocator: ^13.0.1
+  intl_phone_field: ^3.2.0
+  firebase_core: ^2.24.2
   #flutter_native_splash: ^2.3.8
 
 dev_dependencies:
@@ -96,7 +98,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/icons/
+     - assets/images/
+     - assets/images/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
