--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   sign_in_with_apple: ^6.1.2
   crypto: ^3.0.5
   firebase_auth: ^4.16.0
+  uuid: ^4.5.0
   #flutter_native_splash: ^2.3.8
 
 dev_dependencies:
@@ -105,6 +106,7 @@ flutter:
   assets:
     - assets/images/misc/
     - assets/images/navbar/
+    - assets/images/services/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
