UI update: - booking service bottom sheet. - base notifications page UI.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,8 @@ flutter:
     - assets/images/misc/
     - assets/images/navbar/
     - assets/images/login_buttons/
+    - assets/images/services/
+    - assets/images/notifications/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
