--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ flutter:
     - assets/images/login_buttons/
     - assets/images/services/
     - assets/images/notifications/
+    - assets/images/onboarding/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
