--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   crypto: ^3.0.5
   firebase_auth: ^4.16.0
   uuid: ^4.5.0
+  image_picker: ^1.1.2
   #flutter_native_splash: ^2.3.8
 
 dev_dependencies:
