--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   firebase_auth: ^4.16.0
   uuid: ^4.5.0
   image_picker: ^1.1.2
+  another_flushbar: ^1.12.30
   #flutter_native_splash: ^2.3.8
 
 dev_dependencies:
