--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,3 +45,6 @@ android {
 flutter {
     source = "../.."
 }
+dependencies {
+    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")
+}
