--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   dartx: ^1.2.0
   dartz: ^0.10.1
   connectivity_plus: ^6.0.5
-  internet_connection_checker: ^2.0.0
+  internet_connection_checker: ^1.0.0+1
   path_provider: ^2.1.4
   shared_preferences: ^2.3.2
   flutter_secure_storage: ^9.2.2
