--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -112,6 +112,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/misc/
+    - assets/images/drawer/
     - assets/images/navbar/
     - assets/images/login_buttons/
     - assets/images/services/
