--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   another_flushbar: ^1.12.30
   firebase_messaging: ^15.1.3
   flutter_callkit_incoming: ^2.0.4+1
+  shimmer: ^3.0.0
 
 
 
