--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -66,7 +66,10 @@
 	<array>
 		<string>remote-notification</string>
 		<string>fetch</string>
+        <string>voip</string>
+        <string>processing</string> 
 	</array>
+    
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
