--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,6 +10,8 @@
 	<string>Gelirx</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -54,10 +56,12 @@
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
 	<dict>
 		<key>masters</key>
-		<string>The example App requires temporary access to the device's precise location.</string>
+		<string>The example App requires temporary access to the device&apos;s precise location.</string>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location when open to get your current location</string>
+	<key>Privacy</key>
+	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app will access your gallery to choose your profile photo</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
@@ -66,10 +70,16 @@
 	<array>
 		<string>remote-notification</string>
 		<string>fetch</string>
-        <string>voip</string>
-        <string>processing</string> 
+		<string>voip</string>
+		<string>processing</string>
 	</array>
-    
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+    <key>NSPushNotificationsUsageDescription</key>
+    <string>We need to send you call notification.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
