--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ dependencies:
   firebase_messaging: ^15.1.3
   flutter_callkit_incoming: ^2.0.4+2
   shimmer: ^3.0.0
+  permission_handler: ^11.3.1
+  location: ^6.0.2
 
 
 
