--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,8 @@ dependencies:
   geolocator: ^13.0.1
   intl_phone_field: ^3.2.0
   firebase_core: ^3.6.0
-  google_sign_in: ^6.2.1
-  flutter_facebook_auth: ^7.0.1
+  #google_sign_in: ^6.2.1
+  #flutter_facebook_auth: ^7.0.1
   sign_in_with_apple: ^6.1.2
   crypto: ^3.0.5
   firebase_auth: ^5.3.1
