--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   shimmer: ^3.0.0
   permission_handler: ^11.3.1
   location: ^6.0.2
+  lottie: ^3.1.2
 
 
 
@@ -121,6 +122,7 @@ flutter:
     - assets/images/services/
     - assets/images/notifications/
     - assets/images/onboarding/
+    - assets/json/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
