--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,3 +45,8 @@ android {
 flutter {
     source = "../.."
 }
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.core:core-ktx:1.10.1'
+}
