--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,28 @@ allprojects {
         mavenCentral()
     }
 }
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.appcompat' && details.requested.name == 'appcompat') {
+                details.useVersion '1.6.1'
+            }
+            if (details.requested.group == 'androidx.appcompat' && details.requested.name == 'appcompat-resources') {
+                details.useVersion '1.6.1'
+            }
+        }
+    }
+}
+
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.appcompat:appcompat:1.6.1'
+    }
+}
 
 rootProject.buildDir = "../build"
 subprojects {
