--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,8 @@ dependencies:
   cloud_firestore: ^5.4.4
   flutter_animate: ^4.5.0
   photo_view: ^0.15.0
+  awesome_notifications: ^0.10.0
+  awesome_notifications_core: ^0.10.0
 
 
 
